<resources>
    <string name="app_name">Term Tracker</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_message">Enter here to begin:</string>
    <string name="enter_button">Enter</string>
    <string name="clock">Clock</string>
    <string name="FAB">TODO</string>
    <string name="add_item">Add</string>
    <string name="action_share">Share</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Title:</string>
    <string name="end_date">End Date:\ </string>
    <string name="start_date">Start Date:\ </string>
    <string name="term_s_courses">Term\'s Courses:\ </string>
    <string name="view_courses">Add / View / Edit Courses</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <string name="add_term">Add New Term</string>
    <string name="title_activity_assessment">AssessmentActivity</string>
    <string name="add">Add</string>
    <string name="add_note">Add Note</string>
    <string name="add_instructor">Add Instructor</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="instructor_name">Instructor Name:</string>
    <string name="instructor_information_title">Instructor Information</string>
    <string name="note_title">Note</string>
    <string name="enter_new_note_hint">Enter a new note:</string>
    <string name="delete">Delete</string>
    <string name="courses_for_term">Courses for Term:\ </string>
    <string name="dialog_confirm_delete_message">Are you sure you wish to delete this?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="ok">OK</string>
    <string name="dialog_confirm_delete_term_message">Are you sure you want to delete this term?</string>
    <string name="toast_term_has_assessments_still">Cannot delete Term! The Term\'s Courses must be deleted first!</string>
    <string name="toast_term_saved">Term saved!</string>
    <string name="assessments">Assessments:\ </string>
    <string name="add_view_edit_assessments">Add / View / Edit Assessments</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_take">Plan to Take</string>
    <string name="toast_assessment_saved">The assessment had been saved!</string>
    <string name="dialog_confirm_delete_message_assessment">Are you sure you wish to delete this Assessment?</string>
    <string name="dialog_confirm_delete_note">Are you sure you want to delete this note?</string>
    <string name="performance">Performance</string>
    <string name="objective">Objective</string>
    <string name="assessment_type">Assessment Type:\ </string>
    <string name="share_note">Share Note</string>
    <string name="set_alerts">Set Alerts</string>
    <string name="set_start_date_alert">Set Start Date Alert:</string>
    <string name="done">Done</string>
    <string name="set_end_date_alert">Set End Date Alert:</string>
    <string name="day_before">Day Before</string>
    <string name="start_date_alert_subtitle">Start Date:</string>
    <string name="end_date_alert_subtitle">End Date:</string>
    <string name="alert_day_before">Alert Day Before</string>
    <string name="alert_day_of">Alert Day Of</string>
    <string name="set_alert_time">Set Alert Time:</string>
    <string name="channel_name">Term Tracker Alerts</string>
    <string name="channel_description">Notifies the user on selected start/end dates of terms/courses/assessments</string>
    <string name="notification_title">Term Tracker Alert</string>
</resources>