<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:theme="@style/Theme.Term_Tracker"
    android:padding="16dp"
    android:background="@drawable/popup_border"
    android:elevation="8dp"
    android:scrollbars="vertical"
    android:keyboardNavigationCluster="true"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructor_information_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_gravity="center"
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instructor_name"
        android:minWidth="200dp"
        android:padding="5dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:padding="5dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="5dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/email_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:textSize="16sp"
            android:id="@+id/popup_cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/cancel"
            android:textStyle="bold" />

        <Button
            android:textSize="16sp"
            android:id="@+id/popup_save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>