<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/termDetailLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <include layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.Term_Tracker"
        android:layout_margin="16dp"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:padding="5dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxBackgroundColor="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/detail_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/start_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            android:padding="5dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxBackgroundColor="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/detail_item_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_date"
            android:padding="5dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxBackgroundColor="@android:color/white" >
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/detail_item_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >
            <TextView
                android:id="@+id/one_to_many"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="oneToMany"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/one_to_many_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:layout_marginTop="0dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/one_to_many_button"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/view_courses"
            android:layout_width="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="100dp">

            <Button

                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>